--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,3 +62,25 @@
 .form-group {
     @apply flex flex-col gap-2;
 }
+
+table {
+    border: 1px solid lightgray;
+}
+
+tbody {
+    border-bottom: 1px solid lightgray;
+}
+
+th {
+    border-bottom: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    padding: 2px 4px;
+}
+
+tfoot {
+    color: gray;
+}
+
+tfoot th {
+    font-weight: normal;
+}
